[package]
name = "byteorder"
version = "0.3.10"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "http://burntsushi.net/rustdoc/byteorder/"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense/MIT"

[lib]
name = "byteorder"

[dependencies.coreio]
git = "https://github.com/Tobba/coreio.git"
rev = "1b15130b0d85cd2aeb0cf173caaae261765c3969"

[dev-dependencies]
quickcheck = "*"
rand = "*"

[profile.bench]
opt-level = 3
