[package]
name = "byteorder"
version = "0.3.10"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "http://burntsushi.net/rustdoc/byteorder/"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense/MIT"

[lib]
name = "byteorder"

[dependencies.coreio]
git = "https://github.com/Tobba/coreio.git"
rev = "39c4cdaf595e20c5723be2b24d922898e944ae3f"

[dev-dependencies]
quickcheck = "*"
rand = "*"

[profile.bench]
opt-level = 3
